# whereitfalls

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/whereitfalls-backend/: SKILL.md
.claude/skills/whereitfalls-context/: SKILL.md
.claude/skills/whereitfalls-frontend/: SKILL.md
.codex/skills/whereitfalls-backend/: SKILL.md
.codex/skills/whereitfalls-context/: SKILL.md
.codex/skills/whereitfalls-frontend/: SKILL.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: alerts.py  health.py  ingest.py  reentries.py  risk.py  subscriptions.py
backend/app/core/: config.py  database.py  errors.py  logging.py
backend/app/jobs/: scheduler.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: api.py
backend/app/services/: alert_dispatch.py  alerts.py  ingest.py  ingestion_sync.py  orbit.py  reentries.py  repository.py  risk.py  risk_recompute.py  sample_data.py
backend/tests/: conftest.py  test_alert_dispatch.py  test_alerts.py  test_api.py  test_ingest.py  test_orbit.py  test_reentry_service.py  test_repository.py  test_risk.py
data/: README.md
docs/: API.md  ARCHITECTURE.md  DATA_SOURCES.md  FRONTEND.md  PITCH.md  PLAN.md  RESEARCH.md  ROTEIRO_DEMO.md  ROTEIRO_PITCH.md  slides-pitch.html
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
(+18 files in other folders)
