[project]
name = "whereitfalls-backend"
version = "0.1.0"
description = "FastAPI backend for WhereItFalls reentry risk alerts."
requires-python = ">=3.13"
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.7.1",
  "python-json-logger>=3.2.1",
  "sgp4>=2.23",
  "shapely>=2.0.6",
  "skyfield>=1.49",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
